forward working but src space not aligned

--- a/notebooks/0.1-visualize-cerebra-data.ipynb
+++ b/notebooks/0.1-visualize-cerebra-data.ipynb
@@ -53,7 +53,7 @@
     "import mne\n",
     "import numpy as np\n",
     "import nibabel as nib\n",
-    "from cerebra_atlas_python.utils import inspect_img,setup_logging\n",
+    "from cerebra_atlas_python.utils import inspect_img, setup_logging\n",
     "from cerebra_atlas_python.plotting import plot_brain_slice_2d, orthoview"
    ]
   },
@@ -66,13 +66,16 @@
     "## Constants\n",
     "\n",
     "# Datasets\n",
-    "ICBM_DIR = op.join(os.getenv(\"DATASETS_DIR\"),\"ICBM_2009c_Nonlinear_Symmetric/mni_icbm152_nlin_sym_09c_nifti\")\n",
-    "CEREBRA_DIR = op.join(os.getenv(\"DATASETS_DIR\"),\"Cerebra\")\n",
+    "ICBM_DIR = op.join(\n",
+    "    os.getenv(\"DATASETS_DIR\"),\n",
+    "    \"ICBM_2009c_Nonlinear_Symmetric/mni_icbm152_nlin_sym_09c_nifti\",\n",
+    ")\n",
+    "CEREBRA_DIR = op.join(os.getenv(\"DATASETS_DIR\"), \"Cerebra\")\n",
     "\n",
     "# FreeSurfer\n",
     "FS_SUBJECTS_DIR = os.getenv(\"SUBJECTS_DIR\")\n",
-    "NEW_SUBJECT_NAME = \"icbm152\" # Used by FreeSurfer\n",
-    "NEW_FS_SUBJECT_DIR = op.join(FS_SUBJECTS_DIR,NEW_SUBJECT_NAME)\n",
+    "NEW_SUBJECT_NAME = \"icbm152\"  # Used by FreeSurfer\n",
+    "NEW_FS_SUBJECT_DIR = op.join(FS_SUBJECTS_DIR, NEW_SUBJECT_NAME)\n",
     "BEM_DIR = op.join(NEW_FS_SUBJECT_DIR, \"bem\")\n",
     "\n",
     "# Output dir\n",
@@ -82,9 +85,9 @@
     "CEREBRA_DATA_MNE_DIR = op.join(CEREBRA_DATA_DIR, \"MNE\")\n",
     "# HEAD_MRI_T_PATH = op.join(CEREBRA_DATA_icbm152_DIR,\"head_mri_t.fif\")\n",
     "# FIDUCIALS_PATH = op.join(CEREBRA_DATA_icbm152_DIR,\"bem/icbm152-fiducials.fif\")\n",
-    "CEREBRA_VOLUME_PATH = op.join(CEREBRA_DATA_DIR,\"volume.npy\")\n",
-    "CEREBRA_AFFINE_PATH = op.join(CEREBRA_DATA_DIR,\"affine.npy\")\n",
-    "LABEL_DETAILS_PATH = op.join(CEREBRA_DATA_DIR,\"label_details.csv\")\n",
+    "CEREBRA_VOLUME_PATH = op.join(CEREBRA_DATA_DIR, \"volume.npy\")\n",
+    "CEREBRA_AFFINE_PATH = op.join(CEREBRA_DATA_DIR, \"affine.npy\")\n",
+    "LABEL_DETAILS_PATH = op.join(CEREBRA_DATA_DIR, \"label_details.csv\")\n",
     "# INFO_PATH = op.join(CEREBRA_DATA_DIR,\"info.fif\")\n",
     "# MRI_RAS_T_PATH = op.join(CEREBRA_DATA_DIR,\"mri_ras-trans.fif\")\n",
     "# MONTAGE_KIND = \"GSN-HydroCel-129\" TODO: DELETE\n",
@@ -166,7 +169,7 @@
    "source": [
     "t1mgz = nib.load(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")\n",
     "inspect_img(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")\n",
-    "orthoview(t1mgz.get_fdata(), t1mgz.affine, narrow_ax=False,plot_affine=True)"
+    "orthoview(t1mgz.get_fdata(), t1mgz.affine, narrow_ax=False, plot_affine=True)"
    ]
   },
   {
@@ -235,7 +238,7 @@
    "source": [
     "wmmgz = nib.load(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/wm.mgz\")\n",
     "inspect_img(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/wm.mgz\")\n",
-    "orthoview(wmmgz.get_fdata(), wmmgz.affine, narrow_ax=False,plot_affine=True)"
+    "orthoview(wmmgz.get_fdata(), wmmgz.affine, narrow_ax=False, plot_affine=True)"
    ]
   },
   {
@@ -308,7 +311,13 @@
    "source": [
     "cerebranii = nib.load(f\"{CEREBRA_DIR}/CerebrA.nii\")\n",
     "inspect_img(f\"{CEREBRA_DIR}/CerebrA.nii\")\n",
-    "orthoview(cerebranii.get_fdata(), cerebranii.affine, narrow_ax=False,plot_affine=True, n_layers=1)"
+    "orthoview(\n",
+    "    cerebranii.get_fdata(),\n",
+    "    cerebranii.affine,\n",
+    "    narrow_ax=False,\n",
+    "    plot_affine=True,\n",
+    "    n_layers=1,\n",
+    ")"
    ]
   },
   {
@@ -378,7 +387,13 @@
     "path = f\"{CEREBRA_DIR}/CerebrA_in_head.mgz\"\n",
     "cerebra_in_head_mgz = nib.load(path)\n",
     "inspect_img(path)\n",
-    "orthoview(cerebra_in_head_mgz.get_fdata(), cerebra_in_head_mgz.affine, narrow_ax=False,plot_affine=True,fixed_value=126)"
+    "orthoview(\n",
+    "    cerebra_in_head_mgz.get_fdata(),\n",
+    "    cerebra_in_head_mgz.affine,\n",
+    "    narrow_ax=False,\n",
+    "    plot_affine=True,\n",
+    "    fixed_value=126,\n",
+    ")"
    ]
   },
   {
@@ -428,8 +443,17 @@
     }
    ],
    "source": [
-    "fig, axs = orthoview(t1mgz.get_fdata(), t1mgz.affine, cmap_name=\"gray\", plot_affine=True, narrow_ax=False)\n",
-    "orthoview(cerebra_in_head_mgz.get_fdata(), cerebra_in_head_mgz.affine, narrow_ax=False,plot_affine=True,fixed_value=126,axs=axs)"
+    "fig, axs = orthoview(\n",
+    "    t1mgz.get_fdata(), t1mgz.affine, cmap_name=\"gray\", plot_affine=True, narrow_ax=False\n",
+    ")\n",
+    "orthoview(\n",
+    "    cerebra_in_head_mgz.get_fdata(),\n",
+    "    cerebra_in_head_mgz.affine,\n",
+    "    narrow_ax=False,\n",
+    "    plot_affine=True,\n",
+    "    fixed_value=126,\n",
+    "    axs=axs,\n",
+    ")"
    ]
   },
   {
@@ -456,7 +480,7 @@
     "def lia_to_ras(volume, affine=None):\n",
     "    flipped_volume = np.rot90(volume, -1, axes=(1, 2))\n",
     "    flipped_volume = np.flipud(flipped_volume)\n",
-    "    \n",
+    "\n",
     "    if affine is None:\n",
     "        return flipped_volume\n",
     "\n",
@@ -473,11 +497,12 @@
     "\n",
     "    # Compute the new affine matrix\n",
     "    new_affine = np.dot(affine, flip_matrix)\n",
-    "    \n",
+    "\n",
     "    return flipped_volume, new_affine\n",
     "\n",
-    "# t1_vol_ras_old, t1_aff_ras_old = move_volume_from_lia_to_ras(t1mgz.get_fdata(),t1mgz.affine) \n",
-    "t1_vol_ras, t1_aff_ras = lia_to_ras(t1mgz.get_fdata(),t1mgz.affine) \n",
+    "\n",
+    "# t1_vol_ras_old, t1_aff_ras_old = move_volume_from_lia_to_ras(t1mgz.get_fdata(),t1mgz.affine)\n",
+    "t1_vol_ras, t1_aff_ras = lia_to_ras(t1mgz.get_fdata(), t1mgz.affine)\n",
     "t1_aff_ras, nib.orientations.aff2axcodes(t1_aff_ras)"
    ]
   },
@@ -502,7 +527,9 @@
     }
    ],
    "source": [
-    "cerebra_ras, cerebra_aff_ras = lia_to_ras(cerebra_in_head_mgz.get_fdata(),cerebra_in_head_mgz.affine) \n",
+    "cerebra_ras, cerebra_aff_ras = lia_to_ras(\n",
+    "    cerebra_in_head_mgz.get_fdata(), cerebra_in_head_mgz.affine\n",
+    ")\n",
     "cerebra_aff_ras, nib.orientations.aff2axcodes(cerebra_aff_ras)"
    ]
   },
@@ -553,8 +580,8 @@
     }
    ],
    "source": [
-    "fig, axs = orthoview(t1_vol_ras, t1_aff_ras, narrow_ax=False,plot_affine=True)\n",
-    "orthoview(cerebra_ras, cerebra_aff_ras, narrow_ax=False,plot_affine=True,axs=axs)"
+    "fig, axs = orthoview(t1_vol_ras, t1_aff_ras, narrow_ax=False, plot_affine=True)\n",
+    "orthoview(cerebra_ras, cerebra_aff_ras, narrow_ax=False, plot_affine=True, axs=axs)"
    ]
   }
  ],
@@ -574,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
