--- a/notebooks/0.2-coordinate-frame-transforms.ipynb
+++ b/notebooks/0.2-coordinate-frame-transforms.ipynb
@@ -29,7 +29,7 @@
     "import logging\n",
     "import mne\n",
     "import numpy as np\n",
-    "from cerebra_atlas_python.utils import inspect_img,setup_logging,get_volume_ras"
+    "from cerebra_atlas_python.utils import inspect_img, setup_logging, get_volume_ras"
    ]
   },
   {
@@ -41,13 +41,16 @@
     "## Constants\n",
     "\n",
     "# Datasets\n",
-    "ICBM_DIR = op.join(os.getenv(\"DATASETS_DIR\"),\"ICBM_2009c_Nonlinear_Symmetric/mni_icbm152_nlin_sym_09c_nifti\")\n",
-    "CEREBRA_DIR = op.join(os.getenv(\"DATASETS_DIR\"),\"Cerebra\")\n",
+    "ICBM_DIR = op.join(\n",
+    "    os.getenv(\"DATASETS_DIR\"),\n",
+    "    \"ICBM_2009c_Nonlinear_Symmetric/mni_icbm152_nlin_sym_09c_nifti\",\n",
+    ")\n",
+    "CEREBRA_DIR = op.join(os.getenv(\"DATASETS_DIR\"), \"Cerebra\")\n",
     "\n",
     "# FreeSurfer\n",
     "FS_SUBJECTS_DIR = os.getenv(\"SUBJECTS_DIR\")\n",
-    "NEW_SUBJECT_NAME = \"icbm152\" # Used by FreeSurfer\n",
-    "NEW_FS_SUBJECT_DIR = op.join(FS_SUBJECTS_DIR,NEW_SUBJECT_NAME)\n",
+    "NEW_SUBJECT_NAME = \"icbm152\"  # Used by FreeSurfer\n",
+    "NEW_FS_SUBJECT_DIR = op.join(FS_SUBJECTS_DIR, NEW_SUBJECT_NAME)\n",
     "BEM_DIR = op.join(NEW_FS_SUBJECT_DIR, \"bem\")\n",
     "\n",
     "# Output dir\n",
@@ -57,9 +60,9 @@
     "CEREBRA_DATA_MNE_DIR = op.join(CEREBRA_DATA_DIR, \"MNE\")\n",
     "# HEAD_MRI_T_PATH = op.join(CEREBRA_DATA_icbm152_DIR,\"head_mri_t.fif\")\n",
     "# FIDUCIALS_PATH = op.join(CEREBRA_DATA_icbm152_DIR,\"bem/icbm152-fiducials.fif\")\n",
-    "CEREBRA_VOLUME_PATH = op.join(CEREBRA_DATA_DIR,\"volume.npy\")\n",
-    "CEREBRA_AFFINE_PATH = op.join(CEREBRA_DATA_DIR,\"affine.npy\")\n",
-    "LABEL_DETAILS_PATH = op.join(CEREBRA_DATA_DIR,\"label_details.csv\")\n",
+    "CEREBRA_VOLUME_PATH = op.join(CEREBRA_DATA_DIR, \"volume.npy\")\n",
+    "CEREBRA_AFFINE_PATH = op.join(CEREBRA_DATA_DIR, \"affine.npy\")\n",
+    "LABEL_DETAILS_PATH = op.join(CEREBRA_DATA_DIR, \"label_details.csv\")\n",
     "# INFO_PATH = op.join(CEREBRA_DATA_DIR,\"info.fif\")\n",
     "# MRI_RAS_T_PATH = op.join(CEREBRA_DATA_DIR,\"mri_ras-trans.fif\")\n",
     "# MONTAGE_KIND = \"GSN-HydroCel-129\" TODO: DELETE\n",
@@ -81,7 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vox_ras_t, vox_mri_t, mri_ras_t, dims, zooms = read_mri_info(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")"
+    "vox_ras_t, vox_mri_t, mri_ras_t, dims, zooms = read_mri_info(\n",
+    "    f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\"\n",
+    ")"
    ]
   },
   {
@@ -161,6 +166,7 @@
    ],
    "source": [
     "import nibabel as nib\n",
+    "\n",
     "t1mgz = nib.load(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")\n",
     "inspect_img(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")"
    ]
@@ -203,7 +209,7 @@
     }
    ],
    "source": [
-    "mri_ras_t,vox_ras_t,vox_mri_t"
+    "mri_ras_t, vox_ras_t, vox_mri_t"
    ]
   },
   {
@@ -269,7 +275,7 @@
     "    ico=4,\n",
     "    conductivity=(0.33, 0.0042, 0.33),\n",
     "    subjects_dir=FS_SUBJECTS_DIR,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -370,9 +376,7 @@
     }
    ],
    "source": [
-    "vol_src_space_transforms = mne.setup_volume_source_space(\n",
-    "    subject=NEW_SUBJECT_NAME\n",
-    ") "
+    "vol_src_space_transforms = mne.setup_volume_source_space(subject=NEW_SUBJECT_NAME)"
    ]
   },
   {
@@ -1505,7 +1509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
