--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -63,9 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CerebrA' object has no attribute 'get_region'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcerebra\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_region\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'CerebrA' object has no attribute 'get_region'"
+     ]
+    }
+   ],
    "source": [
     "cerebra.get_region"
    ]
